# src/docs/swagger.json
@@ -7,12 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"File": {
-				"description": "Provides information about files and allows JavaScript in a web page to access their content.\n\n[MDN Reference](https://developer.mozilla.org/docs/Web/API/File)",
-				"properties": {},
-				"type": "object",
-				"additionalProperties": false
-			},
 			"IUser": {
 				"properties": {
 					"name": {
@@ -29,9 +23,6 @@
 							"Female",
 							"Other"
 						]
-					},
-					"file": {
-						"$ref": "#/components/schemas/File"
 					},
 					"email": {
 						"type": "string"
@@ -57,9 +48,6 @@
 							"Other"
 						]
 					},
-					"file": {
-						"$ref": "#/components/schemas/File"
-					},
 					"email": {
 						"type": "string"
 					}
@@ -71,7 +59,7 @@
 		"securitySchemes": {}
 	},
 	"info": {
-		"title": "testnode",
+		"title": "product-service",
 		"version": "1.0.0",
 		"license": {
 			"name": "MIT"
@@ -114,8 +102,8 @@
 			"post": {
 				"operationId": "CreateNewUser",
 				"responses": {
-					"200": {
-						"description": "Ok",
+					"201": {
+						"description": "Created",
 						"content": {
 							"application/json": {
 								"schema": {
